<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelBootcamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/orange"
        android:textAlignment="center"
        android:text="@string/txt_bootcamp"
        tools:text="@string/txt_bootcamp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txt_title"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/labelBootcamp"
        app:layout_constraintTop_toBottomOf="@+id/labelBootcamp"
        tools:text="@string/txt_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_PF"
        tools:text="@string/txt_PF"
        app:layout_constraintStart_toStartOf="@+id/labelTitle"
        app:layout_constraintTop_toBottomOf="@+id/labelTitle"  />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelPJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_PJ"
        tools:text="@string/txt_PJ"
        app:layout_constraintStart_toStartOf="@+id/labelPF"
        app:layout_constraintTop_toBottomOf="@+id/labelPF" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelMEI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_MEI"
        tools:text="@string/txt_MEI"
        app:layout_constraintStart_toStartOf="@+id/labelPJ"
        app:layout_constraintTop_toBottomOf="@+id/labelPJ" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelLoans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Loans"
        tools:text="@string/txt_Loans"
        app:layout_constraintStart_toStartOf="@+id/labelMEI"
        app:layout_constraintTop_toBottomOf="@+id/labelMEI" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelInterInvest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_InterInvest"
        tools:text="@string/txt_InterInvest"
        app:layout_constraintStart_toStartOf="@+id/labelLoans"
        app:layout_constraintTop_toBottomOf="@+id/labelLoans" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelInterShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_InterShop"
        tools:text="@string/txt_InterShop"
        app:layout_constraintStart_toStartOf="@+id/labelInterInvest"
        app:layout_constraintTop_toBottomOf="@+id/labelInterInvest"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/labelInsurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Insurance"
        tools:text="@string/txt_Insurance"
        app:layout_constraintStart_toStartOf="@+id/labelInterShop"
        app:layout_constraintTop_toBottomOf="@+id/labelInterShop" />

</androidx.constraintlayout.widget.ConstraintLayout>